--- a/code/config.json
+++ b/code/config.json
@@ -69,24 +69,34 @@
   },
   "artifacts":[
     {
-      "type":"sing",
-      "x":0.5,
-      "y":0.5
-    },
-    {
-      "type":"dual",
-      "x1":0.2,
-      "y1":0.2,
-      "x2":0.8,
-      "y2":0.8
+      "type":"rip",
+      "x1":0.25,
+      "y1":0.25,
+      "x2":0.75,
+      "y2":0.75,
+      "offset":0.5
     },
     {
       "type":"rip",
-      "x1":0.3,
-      "y1":0.2,
-      "x2":0.3,
-      "y2":0.8,
+      "x1":0.25,
+      "y1":0.75,
+      "x2":0.75,
+      "y2":0.25,
       "offset":0.5
+    },
+    {
+      "type":"dual",
+      "x1":0.5,
+      "y1":0.25,
+      "x2":0.5,
+      "y2":0.75
+    },
+    {
+      "type":"dual",
+      "x1":0.25,
+      "y1":0.5,
+      "x2":0.75,
+      "y2":0.5
     }
   ],
   "fragment": "fragment.shader",
